--- a/css/styles.css
+++ b/css/styles.css
@@ -482,6 +482,14 @@ a {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-backdrop.is-open {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal {
@@ -613,4 +621,53 @@ a {
 }
 .form-input-comment::placeholder {
   color: rgba(46, 47, 66, 0.4);
+}
+
+.checkbox-form {
+  margin-bottom: 24px;
+}
+.checkbox-label {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.checkbox-label-link {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+
+.checkbox-form-custom {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  cursor: pointer;
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.checkbox-input:checked + .checkbox-label > .checkbox-form-custom {
+  background-color: rgb(64, 75, 191);
+  border-color: #404bbf;
+  fill: #ffffff;
+}
+
+/* .checkbox-input:focus + .checkbox-label > .checkbox-form-custom {
+  outline: 1px solid rgb(64, 75, 191);
+} */
+
+.button .checkbox-btn {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: row;
+  gap: 10px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
 }
