--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,7 @@ a {
   align-items: center;
   justify-content: center;
   gap: 24px;
+  margin-top: 8px;
 }
 .team-social-media-item {
   width: 40px;
@@ -311,7 +312,6 @@ a {
   height: 100%;
   border-radius: 50%;
   background-color: #4d5ae5;
-  margin-top: 8px;
 }
 .media-social-list-link:hover,
 .media-social-list-link:focus {
@@ -395,7 +395,7 @@ a {
   text-align: center;
 }
 
-.portfolio-img:hover .portfolio-text-overlay {
+.item-portfolio:hover .portfolio-text-overlay {
   transform: translateY(0);
 }
 
@@ -433,7 +433,6 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  margin-top: 16px;
   max-width: 264px;
 }
 .footer-first {
