--- a/css/styles.css
+++ b/css/styles.css
@@ -27,14 +27,14 @@ a {
   text-decoration: none;
 }
 
-/* common */
+/* COMMON */
 .container {
   max-width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
 
-/* header */
+/* HEADER */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08),
@@ -152,7 +152,6 @@ a {
 }
 .button:hover {
   background-color: #404bbf;
-  /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .section-first {
@@ -183,7 +182,7 @@ a {
   max-width: 496px;
 }
 
-/* Benefits */
+/* BENEFITS */
 .benefits {
   padding: 120px 0;
   background-color: #ffffff;
@@ -237,7 +236,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-/* Our Team */
+/* OUR TEAM */
 .title-our-team {
   font-weight: 700;
   font-size: 36px;
@@ -322,7 +321,7 @@ a {
 .team-social-list-icon {
   fill: #f4f4fd;
 }
-/* Our portfolio */
+/* OUR PORTFOLIO */
 .our-portfolio-section {
   padding: 120px 0;
   background-color: #ffffff;
@@ -399,7 +398,7 @@ a {
   transform: translateY(0);
 }
 
-/* Footer */
+/* FOOTER */
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -606,7 +605,7 @@ a {
 }
 
 .form-container {
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .form-label {
@@ -655,7 +654,9 @@ a {
   stroke: #4d5ae5;
   fill: #4d5ae5;
 }
-
+.form-container-comment {
+  margin-bottom: 16px;
+}
 .form-input-comment {
   width: 100%;
   height: 120px;
